Align mini cinema trackers with debug

--- a/index.html
+++ b/index.html
@@ -663,7 +663,9 @@
     const NOSTR_WHDA_D = "WHDA";
     const MAGNET_TRACKERS =
       "&tr=wss%3A%2F%2Ftracker.openwebtorrent.com" +
-      "&tr=wss%3A%2F%2Ftracker.webtorrent.dev";
+      "&tr=wss%3A%2F%2Ftracker.webtorrent.dev" +
+      "&tr=wss%3A%2F%2Ftracker.btorrent.xyz" +
+      "&tr=wss%3A%2F%2Ftracker.0x6d.net";
 
     let whdaStatus = {};
     let filmBag = [];
