Point debug at new default hash

--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
 
     <section class="panel">
       <div class="panel-header">
-        <div class="panel-title">Nostr WHDA draft</div>
+        <div class="panel-title">Cinema Nostr draft</div>
       </div>
       <div class="client-row">
         <div class="client-label">
